--- a/BootGemFireServer/pom.xml
+++ b/BootGemFireServer/pom.xml
@@ -6,9 +6,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
+    <groupId>io.pivotal.spring-boot-and-sdg</groupId>
     <artifactId>parent-pom</artifactId>
-    <groupId>io.pivotal</groupId>
-    <version>1</version>
+    <version>1.0.0.SNAPSHOT</version>
   </parent>
 
   <artifactId>BootGemFireServer</artifactId>
@@ -19,7 +19,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>io.pivotal</groupId>
+      <groupId>io.pivotal.spring-boot-and-sdg</groupId>
       <artifactId>DomainService</artifactId>
     </dependency>
   </dependencies>
