--- a/BootWithXml/pom.xml
+++ b/BootWithXml/pom.xml
@@ -5,9 +5,9 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>io.pivotal</groupId>
+    <groupId>io.pivotal.spring-boot-and-sdg</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>1</version>
+    <version>1.0.0.SNAPSHOT</version>
   </parent>
 
   <artifactId>BootWithXml</artifactId>
@@ -18,7 +18,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>io.pivotal</groupId>
+      <groupId>io.pivotal.spring-boot-and-sdg</groupId>
       <artifactId>DomainService</artifactId>
     </dependency>
   </dependencies>
