--- a/pom.xml
+++ b/pom.xml
@@ -10,20 +10,20 @@
 		<version>1.5.8.RELEASE</version>
 	</parent>
 
-	<groupId>io.pivotal</groupId>
+	<groupId>io.pivotal.spring-boot-and-sdg</groupId>
 	<artifactId>parent-pom</artifactId>
-	<version>1</version>
+	<version>1.0.0.SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>parent-pom</name>
 	<description>Demo project for Spring Boot and Spring Data GemFire</description>
 
 	<modules>
+		<module>DomainService</module>
 		<module>BootGemFireServer</module>
 		<module>BootWithAnnotations</module>
 		<module>BootWithJavaConfig</module>
 		<module>BootWithXml</module>
-		<module>DomainService</module>
 	</modules>
 
 	<properties>
@@ -46,7 +46,7 @@
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
-				<groupId>io.pivotal</groupId>
+				<groupId>io.pivotal.spring-boot-and-sdg</groupId>
 				<artifactId>DomainService</artifactId>
 				<version>${project.version}</version>
 			</dependency>
