--- a/BootWithJavaConfig/pom.xml
+++ b/BootWithJavaConfig/pom.xml
@@ -8,14 +8,13 @@
   <parent>
     <groupId>io.pivotal.spring-boot-and-sdg</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>1.0.0.SNAPSHOT</version>
+    <version>1.0.0.BUILD-SNAPSHOT</version>
   </parent>
 
   <artifactId>BootWithJavaConfig</artifactId>
   <packaging>jar</packaging>
 
   <name>BootWithJavaConfig</name>
-  <url>http://maven.apache.org</url>
 
   <dependencies>
     <dependency>
@@ -23,5 +22,14 @@
       <artifactId>DomainService</artifactId>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-maven-plugin</artifactId>
+      </plugin>
+    </plugins>
+  </build>
 
 </project>
