--- a/BootWithXml/pom.xml
+++ b/BootWithXml/pom.xml
@@ -7,14 +7,13 @@
   <parent>
     <groupId>io.pivotal.spring-boot-and-sdg</groupId>
     <artifactId>parent-pom</artifactId>
-    <version>1.0.0.SNAPSHOT</version>
+    <version>1.0.0.BUILD-SNAPSHOT</version>
   </parent>
 
   <artifactId>BootWithXml</artifactId>
   <packaging>jar</packaging>
 
   <name>BootWithXml</name>
-  <url>http://maven.apache.org</url>
 
   <dependencies>
     <dependency>
