--- a/BootGemFireServer/pom.xml
+++ b/BootGemFireServer/pom.xml
@@ -17,7 +17,7 @@
   <name>BootGemFireServer</name>
 
   <properties>
-    <application-class>io.pivotal.app.Application</application-class>
+    <application-class>io.pivotal.app.GemFireServer</application-class>
   </properties>
 
   <dependencies>
