--- a/BootGemFireServer/pom.xml
+++ b/BootGemFireServer/pom.xml
@@ -36,6 +36,14 @@
           <mainClass>${application-class}</mainClass>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>${exec-maven-plugin.version}</version>
+        <configuration>
+          <mainClass>${application-class}</mainClass>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
