--- a/pom.xml
+++ b/pom.xml
@@ -48,14 +48,15 @@
 	</developers>
 
 	<modules>
-		<module>DomainService</module>
 		<module>BootGemFireServer</module>
 		<module>BootWithAnnotations</module>
 		<module>BootWithJavaConfig</module>
 		<module>BootWithXml</module>
+		<module>DomainService</module>
 	</modules>
 
 	<properties>
+		<exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
 		<java.version>1.8</java.version>
 		<maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
