Add the appropriate exclusions for the spring-data-gemfire and spring-data-geode artifacts on the DomainService dependency.

--- a/BootWithJavaConfig/pom.xml
+++ b/BootWithJavaConfig/pom.xml
@@ -20,6 +20,16 @@
     <dependency>
       <groupId>io.pivotal.spring-boot-and-sdg</groupId>
       <artifactId>DomainService</artifactId>
+      <exclusions>
+        <exclusion>
+          <groupId>org.springframework.data</groupId>
+          <artifactId>spring-data-gemfire</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.springframework.data</groupId>
+          <artifactId>spring-data-geode</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
   </dependencies>
 
